[package]
name = "zeitfetch"
version = "0.1.6"
edition = "2021"
authors = ["Henrique V (nidnogg)"]
description = "Instantaneous snapshots of cross-platform system information"
license = "MIT"
keywords = ["fetch", "system", "info", "cli", "utils"]
categories = ["command-line-utilities", "os", "rendering", "visualization", "filesystem"]
repository = "https://github.com/nidnogg/zeitfetch"
homepage = "https://github.com/nidnogg/zeitfetch"
readme = "README.md"

[dependencies]
home = "0.5.3"
lazy_static = "1.4.0"
prettytable-rs = "^0.10"
regex = "1.7.3"
sysinfo = "0.28.2"
