[package]
name = "zeitfetch"
version = "0.1.6"
edition = "2021"
authors = ["Henrique V (nidnogg)"]
description = "Instantaneous snapshots of cross-platform system information"
license = "MIT"
keywords = ["fetch", "system", "info", "cli", "utils"]
categories = ["command-line-utilities", "os", "rendering", "visualization", "filesystem"]
repository = "https://github.com/nidnogg/zeitfetch"
homepage = "https://github.com/nidnogg/zeitfetch"
readme = "README.md"

[dependencies]
sysinfo = "0.28.2"
home = "0.5.3"
prettytable-rs = "^0.10"
