[package]
name = "zeitfetch"
version = "0.1.16"
edition = "2021"
authors = ["Henrique V (nidnogg)"]
description = "Instantaneous snapshots of cross-platform system information"
license = "MIT"
keywords = ["fetch", "system", "info", "cli", "utils"]
categories = [
    "command-line-utilities",
    "os",
    "rendering",
    "visualization",
    "filesystem",
]
repository = "https://github.com/nidnogg/zeitfetch"
homepage = "https://github.com/nidnogg/zeitfetch"
readme = "README.md"

[dependencies]
home = "0.5.3"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
strum = "0.25.0"
strum_macros = "0.25.3"
sysinfo = "0.29.11"
termsize = "0.1.8"
terminal_size = "0.4.1"
unicode-segmentation = "1.10.1"
unicode-width = "0.2.0"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processenv", "consoleapi"] }

[dev-dependencies]
rstest = "0.26.0"
